add basic auth for config webapi
